# open-agent-relay

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: architecture.md
examples/: README.md
examples/claude-read-only-review/: README.md  claude_review.sh  serve.sh
examples/codex-read-only-review/: README.md  serve.sh
examples/read-only-campaign-report/: README.md  campaigns.csv  report.py  serve.sh
src/openagentrelay/: __init__.py  cli.py  client.py  conversations.py  hub.py  models.py  runner.py  server.py  store.py
tests/: test_direct.py  test_examples.py  test_hub.py  test_runner.py  test_store.py
