[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "open-agent-relay"
version = "0.1.0"
description = "Let teammates call your local agent or automation directly over the LAN."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "ShakespeareLabs" }]
keywords = ["agents", "automation", "lan", "local-first", "self-hosted"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]

[project.scripts]
relay = "openagentrelay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
